Update to 1.20.2 [WIP]

--- a/gradle.properties
+++ b/gradle.properties
@@ -32,8 +32,12 @@ fabric.loom.multiProjectOptimisation=true
 	fapi_1200=0.80.0
 	modmenu_1200=6.2.2
 
+	yarn_mappings_1202=4
+	fapi_1202=0.90.0
+	modmenu_1202=8.0.0
+
 # Mod Properties
 	fapi_forwarding_version=1.0.2
 	mod_version = 3.4.0
 	maven_group = io.github.bumblesoftware.fastload
-	archives_base_name = Fastload+1.18.2-1.20
+	archives_base_name = Fastload+1.18.2-1.20.2
