--- a/settings.gradle
+++ b/settings.gradle
@@ -19,4 +19,5 @@ include "Fastload-Fapi-Forwarding-1.19.2"
 include "Fastload-Fapi-Forwarding-1.19.3"
 include "Fastload-Fapi-Forwarding-1.19.4"
 include "Fastload-Fapi-Forwarding-1.20"
+include "Fastload-Fapi-Forwarding-1.20.2"
 
